# meowster-visual-cnn

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  deploy-gcp.yml  deploy.yml
app/: main.py  model.py  schemas.py
test_images/: README.md
tests/: test_predict.py
